# DigitalVox5

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  imgui.ini
apps/: CMakeLists.txt  assimp_app.cpp  assimp_app.h  atomic_compute_app.cpp  atomic_compute_app.h  cascade_shadowmap_app.cpp  cascade_shadowmap_app.h  cluster_forward_app.cpp  cluster_forward_app.h  framebuffer_picker_app.cpp  framebuffer_picker_app.h  gui_app.cpp  gui_app.h  gui_custom_app.cpp  gui_custom_app.h  hdr.cpp  hdr.h  ibl_app.cpp  ibl_app.h  imgui_example.cpp  irradiance_app.cpp  irradiance_app.h  main.cpp  multi_light_app.cpp  multi_light_app.h  particle_app.cpp  particle_app.h  pbr_app.cpp  pbr_app.h  physx_app.cpp  physx_app.h  physx_dynamic_app.cpp  physx_dynamic_app.h  physx_joint_app.cpp  physx_joint_app.h  primitive_app.cpp  primitive_app.h  shadowmap_app.cpp  shadowmap_app.h  skybox_app.cpp  (+1 more)
arc.base/: CMakeLists.txt  compiler_info.cpp  compiler_info.h  console.cpp  console.h  cpu_info.cpp  cpu_info.h  dataset.cpp  dataset.h  download.cpp  download.h  eigen.h  extract.cpp  extract.h  extract_zip.cpp  extract_zip.h  file_system.cpp  file_system.h  helper.cpp  helper.h  macro.h  mini_vec.h  overload.h  parallel.cpp  parallel.h  progress_reporters.h  timer.cpp  timer.h
arc.core/: CMakeLists.txt  advanced_indexing.cpp  advanced_indexing.h  atomic.h  blob.h  cuda_utils.h  device.h  dispatch.h  dl_pack.h  dtype.cpp  dtype.h  eigen_converter.cpp  eigen_converter.h  function_traits.h  indexer.cpp  indexer.h  memory_manager.cpp  memory_manager.h  memory_manager_cached.cpp  memory_manager_cpu.cpp  memory_manager_statistic.cpp  memory_manager_statistic.h  parallel_for.h  scalar.h  shape_util.cpp  shape_util.h  size_vector.cpp  size_vector.h  std_allocator.h  tensor.cpp  tensor.h  tensor_check.cpp  tensor_check.h  tensor_function.cpp  tensor_function.h  tensor_init.h  tensor_key.cpp  tensor_key.h  tensor_list.cpp  tensor_list.h
arc.geometry/: CMakeLists.txt  bounding_volume.cpp  bounding_volume.h  eigen.cpp  eigen.h  estimate_normals.cpp  geometry.h  geometry_2d.h  geometry_3d.cpp  geometry_3d.h  half_edge_triangle_mesh.cpp  half_edge_triangle_mesh.h  ijson_convertible.cpp  ijson_convertible.h  image.cpp  image.h  image_factory.cpp  intersection_test.cpp  intersection_test.h  iss_key_points.cpp  kdtree_flann.cpp  kdtree_flann.h  kdtree_search_param.h  key_point.h  line_3d.cpp  line_3d.h  line_set.cpp  line_set.h  line_set_factory.cpp  logging.h  mesh_base.cpp  mesh_base.h  octree.cpp  octree.h  point_cloud.cpp  point_cloud.h  point_cloud_cluster.cpp  point_cloud_factory.cpp  point_cloud_segmentation.cpp  progress_bar.cpp  (+21 more)
test.base/: CMakeLists.txt  compare.cpp  compare.h  dataset_tests.cpp  download_tests.cpp  eigen_tests.cpp  extract_tests.cpp  file_system_tests.cpp  helper_tests.cpp  ijson_convertible_tests.cpp  progress_bar_tests.cpp  rand.cpp  rand.h  sort.cpp  sort.h  timer_tests.cpp
test.geometry/: CMakeLists.txt  accumulated_point_tests.cpp  axis_aligned_bounding_box_tests.cpp  compare.cpp  compare.h  estimate_normals_tests.cpp  half_edge_triangle_mesh_tests.cpp  image_tests.cpp  intersection_tests.cpp  kdtree_flann_tests.cpp  line_3d_tests.cpp  line_set_tests.cpp  octree_tests.cpp  point_cloud_tests.cpp  print.h  rand.cpp  rand.h  raw.cpp  raw.h  rgbd_image_tests.cpp  sort.cpp  sort.h  tests.cpp  tests.h  tetra_mesh_tests.cpp  triangle_mesh_tests.cpp  voxel_grid_tests.cpp
test.io/: CMakeLists.txt  compare.h  ijson_convertible_io_tests.cpp  image_io_tests.cpp  octree_io_tests.cpp  point_cloud_io_tests.cpp  print.h  raw.cpp  raw.h  sort.cpp  sort.h  tests.cpp  tests.h  triangle_mesh_io_tests.cpp  voxel_grid_io_tests.cpp
vox.base/: CMakeLists.txt  compiler_info.cpp  compiler_info.h  console.cpp  console.h  cpu_info.cpp  cpu_info.h  dataset.cpp  dataset.h  download.cpp  download.h  eigen.cpp  eigen.h  extract.cpp  extract.h  extract_zip.cpp  extract_zip.h  file_system.cpp  file_system.h  helper.cpp  helper.h  ijson_convertible.cpp  ijson_convertible.h  ioapi.c  macro.h  mini_vec.h  overload.h  parallel.cpp  parallel.h  preprocessor.h  progress_bar.cpp  progress_bar.h  progress_reporters.h  timer.cpp  timer.h  unzip.c
vox.cloth/: Allocator.cpp  BoundingBox.h  CMakeLists.txt  Callbacks.cpp  ClothBase.h  ClothClone.h  ClothFabricCooker.cpp  ClothGeodesicTetherCooker.cpp  ClothImpl.h  ClothMeshQuadifier.cpp  ClothSimpleTetherCooker.cpp  Factory.cpp  IndexPair.h  IterationState.h  MovingAverage.h  PhaseConfig.cpp  PointInterpolator.h  Simd.h  StackAllocator.h  SwCloth.cpp  SwCloth.h  SwClothData.cpp  SwClothData.h  SwCollision.cpp  SwCollision.h  SwCollisionHelpers.h  SwFabric.cpp  SwFabric.h  SwFactory.cpp  SwFactory.h  SwInterCollision.cpp  SwInterCollision.h  SwSelfCollision.cpp  SwSelfCollision.h  SwSolver.cpp  SwSolver.h  SwSolverKernel.cpp  SwSolverKernel.h  TripletScheduler.cpp  TripletScheduler.h  (+11 more)
vox.compute/: CMakeLists.txt  aabb.h  bounding_sphere.h  bounding_sphere_hierarchy.cpp  bounding_sphere_hierarchy.h  collision_detection.cpp  collision_detection.h  common.h  constant_buffers.h  constraints.cpp  constraints.h  cubic_sdf_collision_detection.cpp  cubic_sdf_collision_detection.h  direct_position_based_solver_for_stiff_rods_interface.h  distance_field_collision_detection.cpp  distance_field_collision_detection.h  id_factory.cpp  id_factory.h  indexed_face_mesh.cpp  indexed_face_mesh.h  indexed_tet_mesh.cpp  indexed_tet_mesh.h  kdTree.h  kdTree.inl  line_model.cpp  line_model.h  marching_cubes_tables.h  math_functions.cpp  math_functions.h  neighborhood_search_spatial_hashing.cpp  neighborhood_search_spatial_hashing.h  particle_data.h  position_based_dynamics.cpp  position_based_dynamics.h  position_based_elastic_rods.cpp  position_based_elastic_rods.h  position_based_fluids.cpp  position_based_fluids.h  position_based_rigid_body_dynamics.cpp  position_based_rigid_body_dynamics.h  (+39 more)
vox.core/: CMakeLists.txt  advanced_indexing.cpp  advanced_indexing.h  atomic.h  blob.h  cuda_utils.h  device.h  dispatch.h  dl_pack.h  dtype.cpp  dtype.h  indexer.cpp  (+28 more)
(+1560 files in other folders)
